--- a/styles-coder11.css
+++ b/styles-coder11.css
@@ -8,6 +8,10 @@ h6 {
     font-family: "Lato", sans-serif
 }
 
+b{
+    font-size: 20px;   
+}
+
 .w3-bar,
 h1,
 button {
@@ -31,6 +35,7 @@ button {
     /* display: flex; */
     float: left;
     width: 100%;
+    border-radius: 50%;
 }
 
 .imgSecciones {
